--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@ referrerpolicy="no-referrer" />
          </div>
      </section>
     
+<div class="footer">
+    © 2025 Ben Hayashi
+</div>
 
     <script src="js/main.js"></script>
 </body>
