--- a/index2.html
+++ b/index2.html
@@ -44,16 +44,17 @@
     <section class="Hero">
         <div class="container">
             <div class="hero-content" style="display: flex; justify-content:center;">
-                <img src="images/icon_logo.svg" alt="icon" style="width: 388px; height:388px; margin-right: 70px;">
+                <img src="images/icon_arrow_left.svg" class="filter-blue" alt="arrow" style="padding-right: 60px;">
+                <img src="images/icon_3ds.svg" alt="icon" style="margin-right: 60px;">
+                <img src="images/icon_psvita.svg" alt="icon" style="margin-right: 60px;">
                 <div style="display: block;">
-                    <h1 class="hero-heading text-xxllight" style="margin: 0px 0px;">
-                        Console unlocked?
-                    </h1>
-                    <h1 class="hero-heading text-xxl" style="margin: 0px 0px;">
-                        Here's what's next.
-                    </h1>
                 </div>
-                <img src="images/icon_arrow.svg" class="filter-blue" alt="arrow" style="padding-left: 60px;">
+            </div>
+            <div class="container">
+                <div class="hero-content" style="display: flex; justify-content:center; padding-bottom: 20px;">
+                    <h1 class="hero-heading text-xxllight" style="margin: 0px 0px;">
+                        Select your device.
+                </div>
             </div>
         </div>
     </section>
